Lesson 0: getting started

--- a/src/tuhi/CMakeLists.txt
+++ b/src/tuhi/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_library(tuhi tuhi.c)
+add_library(tuhi tuhi.cc)
 
+target_link_libraries(tuhi tga)
 target_include_directories(tuhi PUBLIC ${CMAKE_SOURCE_DIR}/include)
