--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ project(tuhi)
 
 set(CMAKE_C_STANDARD 17)
 
+include(CTest)
+include(GoogleTest)
+enable_testing()
+
 add_subdirectory(vendor)
 add_subdirectory(src)
 add_subdirectory(tests)
